--- a/HappyHealthyTummyApp/app/src/main/res/layout/content_add_notification_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/content_add_notification_page.xml
@@ -21,19 +21,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.807" />
+        app:layout_constraintVertical_bias="0.21" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/saveNotificationButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="104dp"
         android:clickable="true"
         app:backgroundTint="@android:color/holo_purple"
-        app:srcCompat="@android:drawable/ic_menu_save"
-        tools:layout_editor_absoluteX="172dp"
-        tools:layout_editor_absoluteY="439dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_save" />
 
-    <!--<Button-->
+<!--<Button-->
         <!--android:id="@+id/saveNotificationButton"-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
@@ -49,7 +51,7 @@
         android:id="@+id/mealGroup"
         android:layout_width="180dp"
         android:layout_height="127dp"
-        android:layout_marginBottom="44dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toTopOf="@+id/saveNotificationButton"
@@ -83,7 +85,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Snack" />
-
 
 
     </RadioGroup>
